# CS330M

./: .gitignore  .gitmodules  CMakeLists.txt
CS330M/: CMakeLists.txt  CS330M.vcxproj  CS330M.vcxproj.filters
CS330M/Debug/: vc143.idb
CS330M/Debug/CS330M.tlog/: CS330M.lastbuildstate
CS330M/include/: application.h  mesh.h  types.h
CS330M/src/: application.cpp  main.cpp  mesh.cpp
CS330M/x64/Debug/: CS330M.exe.recipe  CS330M.ilk  vc143.idb
CS330M/x64/Debug/CS330M.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS330M.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
